WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
303649
REGRESSION(
303988@main
) EnhancedSecurityReason::reasonForEnhancedSecurity triggers return-type error on builds without assertions
https://bugs.webkit.org/show_bug.cgi?id=303649
Summary
REGRESSION(303988@main) EnhancedSecurityReason::reasonForEnhancedSecurity tri...
Lauro Moura
Reported
2025-12-05 11:52:47 PST
In file included from /home/lauro/wkdev-shared/dev/wk-gtk/WebKit-GTK/WebKitBuild/WPE/Release/DerivedSources/WebKit/unified-sources/UnifiedSource-88d1702b-2.cpp:1: /home/lauro/wkdev-shared/dev/wk-gtk/WebKit-GTK/Source/WebKit/UIProcess/EnhancedSecurityTracking.cpp: In function ‘WebKit::EnhancedSecurityReason WebKit::reasonForEnhancedSecurity(EnhancedSecurity)’: /home/lauro/wkdev-shared/dev/wk-gtk/WebKit-GTK/Source/WebKit/UIProcess/EnhancedSecurityTracking.cpp:128:1: error: control reaches end of non-void function [-Werror=return-type] 128 | } | ^ cc1plus: all warnings being treated as errors [956/1365] Building CXX object Source/WebKit/CMakeFiles/WebKit.dir/__/__/DerivedSources/WebKit/GeneratedSerializers.cpp.o ninja: build stopped: subcommand failed. Patch incoming.
Attachments
Add attachment
proposed patch, testcase, etc.
Lauro Moura
Comment 1
2025-12-05 11:56:48 PST
Pull request:
https://github.com/WebKit/WebKit/pull/54947
EWS
Comment 2
2025-12-05 15:59:45 PST
Committed
304023@main
(59f82512dc62): <
https://commits.webkit.org/304023@main
> Reviewed commits have been landed. Closing PR #54947 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2025-12-05 16:00:17 PST
<
rdar://problem/165947045
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug