REGRESSION(303988@main) EnhancedSecurityReason::reasonForEnhancedSecurity triggers return-type error on builds without assertions https://bugs.webkit.org/show_bug.cgi?id=303649

Reviewed by Darin Adler.

Follow the same same scheme in enhacedSecurityState returning a
placeholder.

* Source/WebKit/UIProcess/EnhancedSecurityTracking.cpp:
(WebKit::reasonForEnhancedSecurity):

Canonical link: https://commits.webkit.org/304023@main